
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
            android:id="@+id/result1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vvod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number"
                android:maxLength="10"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/vvod_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <TextView
            android:id="@+id/price_List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/percent"
                    android:inputType="number"
                    android:maxLength="2"
                    android:id="@+id/discount"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/startPosition"
                    android:id="@+id/offset"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/number"
                    android:id="@+id/readLength"/>
            </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/result_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_button" />

        <TextView
            android:id="@+id/result2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
